# fireducks_tutorial

./: README.md  fireducks_bench  fireducks_benchv2.1.ipynb  fireducks_benchv2.py  fireducks_benchv3  fireducks_benchv3.ipynb  fireducks_benchv3.py  pyproject.toml
results/: benchmark.csv
