[tool.poetry]
name = "fireducks-tutorial"
version = "0.1.0"
description = "Fireducks tutorial, benchmarks and cookbooks"
authors = ["sandeep k nayak"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
